[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/1bitpack_kenney_1.2/1bitpack_monochrome_transparent_tiles/tile522.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Pickup.gd" type="Script" id=2]
[ext_resource path="res://Sprites/1bitpack_kenney_1.2/1bitpack_monochrome_transparent_tiles/tile673.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 90.3701

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Pickup" type="Area2D"]
collision_mask = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )

[node name="PickupRegion" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="NoticeSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -50 )
scale = Vector2( 4, 4 )
frames = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_shape_entered" from="." to="." method="_on_Pickup_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_Pickup_area_shape_exited"]
[connection signal="body_entered" from="." to="." method="_on_Pickup_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Pickup_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
